# template-python

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: coverage.yml  format.yml  lint.yml  test.yml
docs/: LLM_CONTEXT.md
make/: common.mk  env.mk  lint.mk  mcp.mk  test.mk
scripts/: test_mcp_client.py  update_cursor_config.py
src/template_python/: __init__.py  main.py  mcp_server.py
tests/: __init__.py
tests/integration/: __init__.py  test_example_integration.py
tests/unit/: __init__.py  test_main.py  test_mcp_server.py
